@@ -1,3 +1,9 @@
+2001-12-21  Miguel de Icaza  <miguel@ximian.com>
+
+	* UInt32Test.cs: Added tests for UInt32.Parse.
+
+	* Int32Test.cs: Added tests for Int32.Parse for various cases.
+
 2001-12-08  Nick Drochak  <ndrochak@gol.com>
 
 	* ByteTest.cs: Added messages to Assert()'s to find out which one was failing.
